--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.thymeleaf.cache=false  
-spring.thymeleaf.suffix: .html
+spring.thymeleaf.cache = false  
+spring.thymeleaf.suffix = .html
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-
-spring.rabbitmq.queue=user.queue
-spring.rabbitmq.exchange=user.exchange
-spring.rabbitmq.routingkey=user.routingkey
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+#
+#spring.rabbitmq.queue=user.queue
+#spring.rabbitmq.exchange=user.exchange
+#spring.rabbitmq.routingkey=user.routingkey
 
